added vadhajtasok scraping

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/news-summary-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Magyar Hírek Összefoglaló - Napi Hírelemzés" />
+    <meta property="og:description" content="Mesterséges intelligencia által készített összefoglaló a magyar hírekről" />
     <!-- Add Google Font Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
